--- a/polls/templates/detail.html
+++ b/polls/templates/detail.html
@@ -9,14 +9,23 @@
 </head>
 <body>
     <h1>{{page_title}}</h1>
-    <form>
-    {% for question in question_list %}
+    <form method="post" action="{% url 'polls_detail' poll_id %}">
+        {% csrf_token %}
+        <div style="text-align: center">
+            <a href="comment">เพิ่ม Comment</a>
+            <input type="submit" value="Save">
+            <input type="button" value="cancel" onclick="window.location = {% url 'index' %}">
+        </div>
+        {% for question in question_list %}
         <h2>{{question.id}}. {{question.text}}</h2>
         {% for choice in question.choice_set.all %}
-            <input type="radio" name="{{ question.id }}" value="{{choice.value}}"> {{choice.text}} <br>
+            <input
+                    type="radio"
+                    name="choice {{ question.id }}"
+                    value="{{choice.id}}"  {% if choice.answer %} checked="checked"
+                    {% endif %}> {{choice.text}} <br>
         {% endfor %}
     {% endfor %}
-        <input type="submit">
     </form>
 </body>
 </html>
