--- a/polls/templates/index.html
+++ b/polls/templates/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <h1>{{page_title}}</h1>
+    <ol>
     {% for poll in poll_list %}
-        <li>{{poll.id}} {{poll.title}} (จำนวนคำถาม: {{poll.question_count}}) <a href="{% url 'polls_detail' poll.id %}">details</a></li>
+        <li>{{poll.title}} (จำนวนคำถาม: {{poll.question_count}}) <a href="{% url 'polls_detail' poll.id %}">details</a></li>
     {% endfor %}
+    </ol>
 </body>
 </html>
